Add CLBlast static bindings

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "clblast-src"]
+[submodule "vendor/clblast"]
 	path = vendor/clblast
 	url = https://github.com/CNugteren/CLBlast.git
-[submodule "third_party/OpenCL-Headers"]
+[submodule "vendor/opencl_headers"]
 	path = vendor/opencl_headers
 	url = https://github.com/KhronosGroup/OpenCL-Headers
